--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ffa95ce14d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f378a424550&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ffa9598f150&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ffa9598f350&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f378a0f2f90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f378a1131d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ffa95f2fb10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ffa95f2fd10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f378a6b38d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f378a6b3ad0&gt;]</pre>
 </div>
 
 </div>
