--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f378a424550&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2b70defbd0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f378a0f2f90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f378a1131d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2b70a63f90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2b70a771d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f378a6b38d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f378a6b3ad0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2b71026890&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2b71026a90&gt;]</pre>
 </div>
 
 </div>
