--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2b70defbd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2775e42410&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2b70a63f90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2b70a771d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2775b38050&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2775b38250&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2b71026890&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2b71026a90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f27760d0a50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f27760d0c50&gt;]</pre>
 </div>
 
 </div>
