--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f28e76bbe10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fcf9c151c90&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f28e7395690&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f28e73957d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fcf9c129050&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fcf9c129250&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f28e793c790&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f28e793c990&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fcf9c6c88d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fcf9c6c8ad0&gt;]</pre>
 </div>
 
 </div>
