--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd407b9b710&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa20da45150&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd40786acd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd40786aed0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa20d710f10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa20d72c150&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd407e37650&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd407e37850&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa20dcc4890&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa20dcc4a90&gt;]</pre>
 </div>
 
 </div>
