--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1073d82050&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fae98295ad0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1073a39f10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1073a54150&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fae97f4bf50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fae97f74190&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1074041b10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f10740039d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fae98515890&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fae98515a90&gt;]</pre>
 </div>
 
 </div>
