--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fbfc3e3ef90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f240ec08090&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fbfc3ac9ed0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fbfc3aea110&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f240e8d8d90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f240e8d8f90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fbfc4097910&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fbfc4097b10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f240eea56d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f240eea58d0&gt;]</pre>
 </div>
 
 </div>
