--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f785144e050&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa992ad40d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7851138090&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7851138290&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa992758e90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa9927720d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f78516e7910&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f78516e7b10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa992d23850&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa992d23a50&gt;]</pre>
 </div>
 
 </div>
