--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fbc5f3c9790&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5396e5f090&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fbc5f087e90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fbc5f09c0d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5396b07ed0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5396b24110&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fbc5f64f790&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fbc5f64f990&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f53970d3810&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f53970d3a10&gt;]</pre>
 </div>
 
 </div>
