--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa1d8f2b3d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3e93670f50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa1d8bfcfd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa1d8bff210&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3e92ff3e90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3e92ff90d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa1d91b0910&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa1d91b0b10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3e935a8750&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3e935a8950&gt;]</pre>
 </div>
 
 </div>
