--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3e93670f50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2cfdedf490&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3e92ff3e90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3e92ff90d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2cfdbb1150&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2cfdbcc050&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3e935a8750&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3e935a8950&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2cfe1756d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2cfe17e9d0&gt;]</pre>
 </div>
 
 </div>
