--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7faddedbf0d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f168e666910&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fadde767fd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7faddea48090&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f168ec32150&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f168ec32350&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7faddeff77d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7faddeff79d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f168f1d2a90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f168f1d2c90&gt;]</pre>
 </div>
 
 </div>
