--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7a3b9d0150&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa59fb9fad0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7a3b69df50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7a3b6bf190&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa59f87ad90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa59f87af90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7a3bc5e990&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7a3bc5eb90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa59fe3d690&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa59fe3d890&gt;]</pre>
 </div>
 
 </div>
