--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe68cd91790&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb5f94a85d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe68ca47e10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe68ca47fd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb5f9180110&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb5f91d6510&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe68d014690&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe68d014890&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb5f972d950&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb5f972db50&gt;]</pre>
 </div>
 
 </div>
