--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb5f94a85d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb0396f7b90&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb5f9180110&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb5f91d6510&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb0393d2ed0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb03942ed90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb5f972d950&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb5f972db50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb039986790&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb039986990&gt;]</pre>
 </div>
 
 </div>
