--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1990b55810&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff783a9c8d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f19908407d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f19908451d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff783740fd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff783747210&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1990de38d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1990de3ad0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff783cf58d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff783cf5ad0&gt;]</pre>
 </div>
 
 </div>
