--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f141c7d5f90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f21d5db8190&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f141c4c0f10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f141c4c9150&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f21d5a5cd50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f21d5a5cf50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f141ca75850&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f141ca75a50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f21d6011650&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f21d6011850&gt;]</pre>
 </div>
 
 </div>
