--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7faa777cad50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f515c748850&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7faa7749cf10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7faa774b8150&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f515c421f10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f515c4160d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7faa77a677d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7faa77a679d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f515c9c9790&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f515c9c9990&gt;]</pre>
 </div>
 
 </div>
