--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f783fa3a810&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f410588eb90&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f783f70be90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f783f7260d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4105563d90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4105563f90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f783fcd6750&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f783fcd6950&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4105b2e710&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4105b2e910&gt;]</pre>
 </div>
 
 </div>
