--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f808a682350&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f586e035090&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f808a36cf10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f808a374150&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f586dcefed0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f586dd02110&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f808a920890&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f808a920a90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f586e2a3850&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f586e2a3a50&gt;]</pre>
 </div>
 
 </div>
