--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f586e035090&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff9921c0b10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f586dcefed0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f586dd02110&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff991e93050&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff991e93250&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f586e2a3850&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f586e2a3a50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff99243f950&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff99243fb50&gt;]</pre>
 </div>
 
 </div>
