--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5b049f1d90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc899996910&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5b046c7050&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5b046c7250&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc899659fd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc89965f210&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5b04c75990&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5b04c75b90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc899c0d910&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc899c0db10&gt;]</pre>
 </div>
 
 </div>
